# geomapper

./: .gitignore  App.tsx  LICENSE  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  utils.ts  vite.config.ts
components/: ActionToolbar.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  Icons.tsx  ImportMappingModal.tsx  LogConsole.tsx  ManualEntryModal.tsx  MapVisualizer.tsx  SettingsModal.tsx  StatsCards.tsx
contexts/: GeocodingContext.tsx  UIContext.tsx
electron/: main.cjs
hooks/: useGeocoding.ts
public/: .gitkeep
services/: amapService.ts  baiduService.ts  db.ts  geoStrategy.ts
src-tauri/: Cargo.toml  tauri.conf.json
