[package]
name = "geomapper-pro"
version = "1.0.0"
description = "专业级批量地理编码工具"
authors = ["GeoMapper Pro"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
